--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -7,32 +7,55 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
     <!-- Estilo custom -->
     <link rel="stylesheet" th:href="@{/css/perfil.css}"/>
+    <link rel="stylesheet" th:href="@{/css/footer.css}"/>
     <!-- FONT FAMILIES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumar+One+Outline&family=Edu+AU+VIC+WA+NT+Arrows:wght@700&family=Kaushan+Script&family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
     <title>Editar perfil</title>
 </head>
-<body>
-<header class="col-12 py-3 d-flex align-items-center">
-    <nav class="col-10 mx-auto d-flex flex-wrap justify-content-between align-items-center text-white">
-        <a class="text-decoration-none fs-4 text-white" th:href="@{/home}">
-            Home
-        </a>
-        <p class="fs-4 m-0">
-            Perfil
-        </p>
-        <a th:href="@{/modificar-perfil}"
-           class="text-decoration-none text-white fs-5 settingsImageContainer">
-            <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
-        </a>
-    </nav>
+<body><!-- HEADER -->
+<div id="blurry-filter"></div>
+<header>
+    <div>
+        <article id="title">
+            <a th:href="@{/home}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-arrow">
+                    <circle cx="12" cy="12" r="10" fill="#333" stroke="white" stroke-width="2"></circle> <!-- Círculo de fondo en gris -->
+                    <path d="M15 12H9M9 12l4-4M9 12l4 4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <!-- Flecha en blanco -->
+                </svg>
+            </a>
+        </article>
+
+        <article id="center">
+            <h1 id="titulo-principal">Perfil</h1>
+        </article>
+
+            <a th:href="@{/modificar-perfil}" class="text-decoration-none text-white fs-5" target="_blank" rel="noopener">
+                <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="#333">
+                    <path d="M19.43 12.98c.04-.32.07-.65.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1a8.12 8.12 0 0 0-1.69-.98l-.38-2.65A.485.485 0 0 0 14 2h-4c-.25 0-.45.18-.49.42l-.38 2.65c-.62.23-1.2.54-1.69.98l-2.49-1a.494.494 0 0 0-.61.22l-2 3.46c-.12.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98L2.62 14.63c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.49.44 1.07.75 1.69.98l.38 2.65c.04.24.24.42.49.42h4c.25 0 .45-.18.49-.42l.38-2.65c.62-.23 1.2-.54 1.69-.98l2.49 1c.23.09.5 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"></path>
+                </svg>
+            </a>
+        </article>
+    </div>
 </header>
 <main class="col-12 d-flex flex-column align-items-center">
     <div class="col-12 col-md-10 userData">
         <div class="col-12 position-relative userHeader d-flex justify-content-center">
-            <div class="col-12 imgStyle bg-dark position-relative"></div>
-            <div class="rounded-circle position-absolute p-5 userImage"></div>
+            <a class="text-decoration-none text-white" target="_blank" rel="noopener" th:href="@{/perfil(id=${usuario.id})}">
+                <!-- Si el usuario no tiene foto, mostrar un ícono predeterminado -->
+                <div class="rounded-circle position-absolute p-5 userImage" th:if="${usuario.urlFotoPerfil == null || usuario.urlFotoPerfil == '/img/fotos-perfil/default.png'}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60px" height="60px" viewBox="0 0 24 24" fill="#333">
+                        <circle cx="12" cy="8" r="4"></circle>
+                        <path d="M12 14c-4.42 0-8 2.24-8 5v1h16v-1c0-2.76-3.58-5-8-5z"></path>
+                    </svg>
+                </div>
+
+                <!-- Si el usuario tiene foto de perfil, mostrar la imagen -->
+                <div class="rounded-circle position-absolute p-5 userImage" th:if="${usuario.urlFotoPerfil != null && usuario.urlFotoPerfil != '/img/fotos-perfil/default.png'}">
+                    <img class="foto-perfil" th:src="@{${usuario.urlFotoPerfil}}" alt="Foto de perfil">
+                </div>
+            </a>
         </div>
 
         <div class="col-12 d-flex flex-column justify-content-center align-items-center text-white py-2">
